--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 (If you don't speak Serbian, move along.)
 
-Нераторгс је генератор једне подврсте шатровачког, илити тровачкогшс. Можеш га погледати у акцији [на Жардини](http://neratorgs.zardina.org).
+Нераторгс је генератор једне подврсте шатровачког, илити тровачкогшс. Можеш га погледати у акцији на Жардини: http://neratorgs.zardina.org
